subdir('Bullet3Common')
subdir('Bullet3Geometry')
subdir('LinearMath')
subdir('Bullet3Collision')
subdir('Bullet3Dynamics')
subdir('Bullet3OpenCL')
subdir('BulletCollision')
subdir('BulletDynamics')
subdir('BulletSoftBody')
subdir('BulletInverseDynamics')
subdir('Bullet3Serialize/Bullet2FileLoader')
