sources = [
  '../clew/clew.c',
  'BroadphaseCollision/b3GpuGridBroadphase.cpp',
  'BroadphaseCollision/b3GpuParallelLinearBvh.cpp',
  'BroadphaseCollision/b3GpuParallelLinearBvhBroadphase.cpp',
  'BroadphaseCollision/b3GpuSapBroadphase.cpp',
  'Initialize/b3OpenCLUtils.cpp',
  'NarrowphaseCollision/b3ContactCache.cpp',
  'NarrowphaseCollision/b3ConvexHullContact.cpp',
  'NarrowphaseCollision/b3GjkEpa.cpp',
  'NarrowphaseCollision/b3GjkPairDetector.cpp',
  'NarrowphaseCollision/b3OptimizedBvh.cpp',
  'NarrowphaseCollision/b3QuantizedBvh.cpp',
  'NarrowphaseCollision/b3StridingMeshInterface.cpp',
  'NarrowphaseCollision/b3TriangleCallback.cpp',
  'NarrowphaseCollision/b3TriangleIndexVertexArray.cpp',
  'NarrowphaseCollision/b3VoronoiSimplexSolver.cpp',
  'ParallelPrimitives/b3BoundSearchCL.cpp',
  'ParallelPrimitives/b3FillCL.cpp',
  'ParallelPrimitives/b3LauncherCL.cpp',
  'ParallelPrimitives/b3PrefixScanCL.cpp',
  'ParallelPrimitives/b3PrefixScanFloat4CL.cpp',
  'ParallelPrimitives/b3RadixSort32CL.cpp',
  'Raycast/b3GpuRaycast.cpp',
  'RigidBody/b3GpuGenericConstraint.cpp',
  'RigidBody/b3GpuJacobiContactSolver.cpp',
  'RigidBody/b3GpuNarrowPhase.cpp',
  'RigidBody/b3GpuPgsConstraintSolver.cpp',
  'RigidBody/b3GpuPgsContactSolver.cpp',
  'RigidBody/b3GpuRigidBodyPipeline.cpp',
  'RigidBody/b3Solver.cpp',
]

Bullet3OpenCL = library(
  'Bullet3OpenCL_clew',
  sources,
  include_directories: include_dirs,
  link_with: [Bullet3Dynamics, LinearMath],
  cpp_args: ['-DB3_USE_CLEW', '-O3']
)
