sources = [
  'Character/btKinematicCharacterController.cpp',
  'ConstraintSolver/btConeTwistConstraint.cpp',
  'ConstraintSolver/btContactConstraint.cpp',
  'ConstraintSolver/btFixedConstraint.cpp',
  'ConstraintSolver/btGearConstraint.cpp',
  'ConstraintSolver/btGeneric6DofConstraint.cpp',
  'ConstraintSolver/btGeneric6DofSpring2Constraint.cpp',
  'ConstraintSolver/btGeneric6DofSpringConstraint.cpp',
  'ConstraintSolver/btHinge2Constraint.cpp',
  'ConstraintSolver/btHingeConstraint.cpp',
  'ConstraintSolver/btNNCGConstraintSolver.cpp',
  'ConstraintSolver/btPoint2PointConstraint.cpp',
  'ConstraintSolver/btSequentialImpulseConstraintSolver.cpp',
  'ConstraintSolver/btSliderConstraint.cpp',
  'ConstraintSolver/btSolve2LinearConstraint.cpp',
  'ConstraintSolver/btTypedConstraint.cpp',
  'ConstraintSolver/btUniversalConstraint.cpp',
  'Dynamics/btDiscreteDynamicsWorld.cpp',
  'Dynamics/btDiscreteDynamicsWorldMt.cpp',
  'Dynamics/btRigidBody.cpp',
  'Dynamics/btSimpleDynamicsWorld.cpp',
  'Dynamics/btSimulationIslandManagerMt.cpp',
  'Featherstone/btMultiBody.cpp',
  'Featherstone/btMultiBodyConstraint.cpp',
  'Featherstone/btMultiBodyConstraintSolver.cpp',
  'Featherstone/btMultiBodyDynamicsWorld.cpp',
  'Featherstone/btMultiBodyFixedConstraint.cpp',
  'Featherstone/btMultiBodyJointLimitConstraint.cpp',
  'Featherstone/btMultiBodyJointMotor.cpp',
  'Featherstone/btMultiBodyPoint2Point.cpp',
  'Featherstone/btMultiBodySliderConstraint.cpp',
  'MLCPSolvers/btDantzigLCP.cpp',
  'MLCPSolvers/btLemkeAlgorithm.cpp',
  'MLCPSolvers/btMLCPSolver.cpp',
  'Vehicle/btRaycastVehicle.cpp',
  'Vehicle/btWheelInfo.cpp',
]

BulletDynamics = library(
  'BulletDynamics',
  sources,
  include_directories: include_dirs,
  link_with: [BulletCollision, LinearMath],
  cpp_args: '-O3'
)
