sources = [
  'btAlignedAllocator.cpp',
  'btConvexHull.cpp',
  'btConvexHullComputer.cpp',
  'btGeometryUtil.cpp',
  'btPolarDecomposition.cpp',
  'btQuickprof.cpp',
  'btSerializer.cpp',
  'btThreads.cpp',
  'btVector3.cpp',
]

LinearMath = library(
  'LinearMath',
  sources,
  include_directories: include_dirs
)
